<?xml version="1.0"?>
<package format="2">
  <name>champ_base</name>
  <version>0.1.0</version>
  <description>CHAMP ROS Hardware and Software Drivers</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>champ</depend>
  <depend>champ_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>message_filters</depend>
</package>
