<?xml version="1.0"?>
<package format="3">
  <name>champ_bringup</name>
  <version>0.1.0</version>
  <description>CHAMP base launch files</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  
  <exec_depend>champ_description</exec_depend>
  <exec_depend>champ_base</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>ecl_threads</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
