<?xml version="1.0"?>
<package format="2">
  <name>champ_description</name>
  <version>0.0.0</version>
  <description>CHAMP Description Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
