<?xml version="1.0"?>
<package format="2">
  <name>champ_gazebo</name>
  <version>0.1.0</version>
  <description>CHAMP Gazebo Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>champ</depend>
  <depend>champ_msgs</depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
</package>
