<?xml version="1.0"?>
<package format="3">
  <name>champ_gazebo</name>
  <version>0.1.0</version>
  <description>CHAMP Gazebo Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

    
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  
  <depend>rclcpp</depend>
  <depend>champ</depend>
  <depend>champ_msgs</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
