<?xml version="1.0"?>
<package format="3">
  <name>champ_msgs</name>
  <version>0.1.0</version>
  <description>champ_msgs package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>common_interfaces</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>common_interfaces</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
