<?xml version="1.0"?>
<package format="2">
  <name>champ_navigation</name>
  <version>0.1.0</version>
  <description>Champ Navigation Files</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>amcl</run_depend>

</package>


