<?xml version="1.0"?>
<package format="2">
  <name>champ_navigation</name>
  <version>0.1.0</version>
  <description>Champ Navigation Files</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

</package>


